--- a/README.html
+++ b/README.html
@@ -43,7 +43,7 @@ body { font-family: 'Times New Roman', Times, serif; font-size: 20pt; background
 </ul>
 
 <p id="red"> You should add the ontology with inferences to GRAPHDB! </p>
-
+<p id="red"> To display the map you should trust the Notebook! </p>
 <p> Makes sure that you have the following python packages installed<p>
 
 <ul> 
